PA_Education/TestMenifest/force-app/main/default/objects/subcontracting_contract__c/subcontracting_contract__c.object-meta.xml
<CustomObject>
    <label>하도급 계약</label>
    <nameField>
        <displayFormat>SUB{YYYY}{MM}{DD}-{00}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>