PA_Education/TestMenifest/force-app/main/default/objects/subcontracting_contract__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>하도급업체 명</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>하도급 계약</relationshipLabel>
    <relationshipName>subcontracting_contract</relationshipName>
    <type>Lookup</type>
</CustomField>