PA_Education/TestMenifest/force-app/main/default/objects/subcontracting_contract__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>계약명</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>하도급 계약</relationshipLabel>
    <relationshipName>subcontracting_contract_del</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>