PA_Education/TestMenifest/force-app/main/default/objects/subcontracting_contract__c/fields/Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date__c</fullName>
    <label>계약일자</label>
    <type>Date</type>
</CustomField>