PA_Education/TestMenifest/force-app/main/default/objects/subcontracting_contract__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>상세설명</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>