PA_Education/TestMenifest/force-app/main/default/objects/subcontracting_contract__c/fields/fm_TotalRemainder__c.field-meta.xml
<CustomField>
    <fullName>fm_TotalRemainder__c</fullName>
    <formula>ru_TotalAmount__c - ru_PaidAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>총 미지급 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>