PA_Education/TestMenifest/force-app/main/default/objects/subcontracting_contract__c/fields/ru_DownPayment__c.field-meta.xml
<CustomField>
    <fullName>ru_DownPayment__c</fullName>
    <label>착수금</label>
    <summarizedField>Payment_Schedule__c.Payment_due__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Schedule__c.Type__c</field>
        <operation>equals</operation>
        <value>착수금</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Schedule__c.subcontracting_contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>