PA_Education/TestMenifest/force-app/main/default/objects/subcontracting_contract__c/fields/ru_TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ru_TotalAmount__c</fullName>
    <label>총 계약금액</label>
    <summarizedField>Payment_Schedule__c.Payment_due__c</summarizedField>
    <summaryForeignKey>Payment_Schedule__c.subcontracting_contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>