PA_Education/TestMenifest/force-app/main/default/objects/subcontracting_contract__c/listViews/All_Subcontract.listView-meta.xml
<ListView>
    <fullName>All_Subcontract</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ru_TotalAmount__c</columns>
    <columns>StartDate__c</columns>
    <columns>Contract_Date__c</columns>
    <columns>EndDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>