PA_Education/TestMenifest/force-app/main/default/objects/subcontracting_contract__c/listViews/Ongoing_Subcontract.listView-meta.xml
<ListView>
    <fullName>Ongoing_Subcontract</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contract__c</columns>
    <columns>ru_TotalAmount__c</columns>
    <columns>fm_TotalRemainder__c</columns>
    <columns>StartDate__c</columns>
    <columns>Contract_Date__c</columns>
    <columns>EndDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EndDate__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>진행중인 하도급 계약</label>
</ListView>