PA_Education/TestMenifest/force-app/main/default/objects/subcontracting_contract__c/listViews/Terminated_Subcontract.listView-meta.xml
<ListView>
    <fullName>Terminated_Subcontract</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ru_TotalAmount__c</columns>
    <columns>fm_TotalRemainder__c</columns>
    <columns>StartDate__c</columns>
    <columns>Contract_Date__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EndDate__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>종료된 하도급 계약(미지급)</label>
</ListView>